--- a/css/main.css
+++ b/css/main.css
@@ -39,10 +39,9 @@ nav ul
                 padding-left: 0;
                 padding-bottom: 10px;}
 footer      { font-weight: .1em;
-                font-size: .8em;
+                font-size: .7em;
                 text-align: center;
-                padding-bottom: 10px;
-                border-top: 2px #221811;}
+                padding: 400px 20px 0px 20px;}
 img         { padding-left: 10px;
                 padding-right: 0px;}
 nav a       { text-decoration: none; }
@@ -61,5 +60,3 @@ nav a       { text-decoration: none; }
                 height: auto;
                 float: right;
                 padding-right: 500px;}
-#foot       { background: url(background.jpg) repeat-x center left;
-                height: 100px;}
