--- a/css/main.css
+++ b/css/main.css
@@ -38,10 +38,6 @@ nav ul
             { list-style-type: none;
                 padding-left: 0;
                 padding-bottom: 10px;}
-footer      { font-weight: .1em;
-                font-size: .7em;
-                text-align: center;
-                padding: 400px 20px 0px 20px;}
 img         { padding-left: 10px;
                 padding-right: 0px;}
 nav a       { text-decoration: none; }
@@ -60,3 +56,9 @@ nav a       { text-decoration: none; }
                 height: auto;
                 float: right;
                 padding-right: 500px;}
+.footer      { position: fixed;
+                left: 0;
+                bottom: 0;
+                width: 100%;
+                background-color: #1f2633;
+                color: white;}
