--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ body        { margin: 0;
                 padding: 0;
                 background: #0000 url('images/page_bg') top repeat-x;
                 font-family: "Oswald Light", Arial, Verdana, sans-serif;
-                color: #000;}
+                color: #000; }
 
 h1          { font-family: "Oswald Light", Gadget, sans-serif;
                 font-size: 24px;
@@ -16,16 +16,10 @@ h2, h3, h4, p, div, ul, dl
                 padding-right: 2em;
                 align: left;}
 
-h4          { background-color: #D2B48C;
-            	 font-size: 1.2em;
-            	 padding-left: 10px;
-            	 padding-bottom: 0px;
-            	 border-bottom: 2px solid #221811;
-            	 text-transform: uppercase;
-              clear: left; }
-
-main        { padding: 0px 0px 2em 0px;
-	               margin-left: 200px;}
+main        { padding: 2em 0px 2em 0px;
+                   margin-left: 200px;
+                   font-family: "Oswald Light";
+                    }
 
 nav         { }
 
@@ -67,13 +61,21 @@ nav a       { text-decoration: none; }
                 float: right;
                 padding-right: 500px;}
 
-.portlist    { list-style-type: none;}
+.column     {
+                float: left;
+                }
 
-.portdesc    { float: right;
-                padding-right: 600px;}
+.left        {
+                width: 35%;
+                }
 
-.portpics    { float: left;
-                padding-left: 400px;}
+.right {
+                width: 65%;
+                }
+
+#portpics    { float: left; 
+                height: 80%;
+                width: 80%;}
 
 .footer      { position: fixed;
                 left: 0;
@@ -81,6 +83,7 @@ nav a       { text-decoration: none; }
                 width: 100%;
                 background-color: #1f2633;
                 color: white;}
+
 #nav         { padding: 0em;
                 text-align: center;
                 font-weight: bold;
@@ -88,10 +91,46 @@ nav a       { text-decoration: none; }
                 padding-top: 80px;
                 float: left;
                 width: 200px;}
+
 #nav li      { margin: 0 0 10px 0;}
 #mobile { display: none; }
 
 #desktop { display: inline; }
+
+.hero-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/banner.png");
+    height: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    width: 100%; height: 44em; 
+  }
+  
+.hero-text {
+text-align: center;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+color: white;
+}
+
+.hero-text button {
+border: none;
+outline: 0;
+display: inline-block;
+padding: 10px 25px;
+color: black;
+background-color: #ddd;
+text-align: center;
+cursor: pointer;
+}
+
+.hero-text button:hover {
+background-color: #555;
+color: white;
+}
 
 @media only screen and (max-width: 1024px) {
 	body { background-image: none;
