--- a/css/main.css
+++ b/css/main.css
@@ -1,142 +1,220 @@
-body        { margin: 0;
-                padding: 0;
-                background: #0000 url('images/page_bg') top repeat-x;
-                font-family: "Oswald Light", Arial, Verdana, sans-serif;
-                color: #000; }
+@font-face {
+    font-family: 'Oswald'; 
+    src: url('fonts/Oswald-Regular.ttf'); 
+}
 
-h1          { font-family: "Oswald Light", Gadget, sans-serif;
-                font-size: 24px;
-                font-style: normal;
-                font-variant: normal;
-                font-weight: 700;
-                line-height: 26.4px; }
+@font-face {
+  font-family: 'Oswald-Bold';
+  src: url('fonts/Oswald-Bold.ttf');
+  font-weight: bold;
+}
 
-h2, h3, h4, p, div, ul, dl
-            { padding-left: 1em;
-                padding-right: 2em;
-                align: left;}
+@font-face {
+  font-family: 'Oswald-Light';
+  src: url('fonts/Oswald-Light.ttf');
+  font-weight: light;
+}
 
-main        { padding: 2em 0px 2em 0px;
-                   margin-left: 200px;
-                   font-family: "Oswald Light";
-                    }
+@font-face {
+  font-family: 'Oswald-ExtraLight';
+  src: url('fonts/Oswald-ExtraLight.ttf');
+  font-weight: ExtraLight;
+}
+button, select {
+  font-family : 'Oswald-LightExtra';
+  font-size   : .5em;
+}
 
-nav         { }
+textarea, input {
+  font-family : 'Oswald-Light';
+  font-size: 1em;
+}
+body { 
+  margin: 0;
+  padding: 0;
+  background: #0000 url('images/page_bg') top repeat-x;
+  font-family: 'Oswald', Arial, Verdana, sans-serif;
+  color: #000;
+}
 
-nav a:link
-            { color: #8e9fde; }
+h1 { 
+  font-family: "Oswald-Light", Gadget, sans-serif;
+  font-size: 24px;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: 700;
+  line-height: 26.4px;
+}
 
-nav a:visited
-            { color: #375adb; }
+h3, h4, p, div, ul, dl   {
+  padding-left: 1em;
+  padding-right: 2em;
+  float: left;
+}
 
-nav a:hover
-            { color: #CC9933; }
+main { 
+  padding: 2em 0px 2em 0px;
+  margin-left: 200px;
+  font-family: "Oswald-Light";
+}
 
-nav ul
-            { list-style-type: none;
-                padding-left: 0;
-                padding-bottom: 10px;}
+a:link { 
+  color: #375adb;
+}
 
-img         { padding-left: 10px;
-                padding-right: 0px;}
+a:visited {
+  color: #1f2633;
+}
 
-nav a       { text-decoration: none; }
+a:hover {
+  color: #8B8181;
+}
 
-*           { box-sizing: border-box; }
+nav ul { 
+  list-style-type: none;
+  padding-left: 0;
+  padding-bottom: 10px;
+}
 
-#wrapper    { background-color: #231814;
-                margin-left: auto;
-                margin-right: auto;
-                width: 80%;
-                min-width: 900px;
-                max-width: 1280px;
-                box-shadow: 5px 5px 5px #828282;}
+img {
+  padding-left: 10px;
+  padding-right: 0px;
+}
 
-#details    { padding-left: 20%;
-                padding-right: 20%;
-                overflow: auto;}
+nav a {
+  text-decoration: none;
+}
 
-#headshot   { width: 650px;
-                height: auto;
-                float: right;
-                padding-right: 500px;}
+* {
+  box-sizing: border-box;
+}
 
-.column     {
-                float: left;
-                }
+#wrapper {
+  background-color: #231814;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  min-width: 900px;
+  max-width: 1280px;
+  box-shadow: 5px 5px 5px #828282;
+}
 
-.left        {
-                width: 35%;
-                }
+#details {
+  padding-left: 20%;
+  padding-right: 20%;
+  overflow: auto;
+}
+
+.column {
+  float: left;
+}
+
+.left {
+  width: 35%;
+}
 
 .right {
-                width: 65%;
-                }
+  width: 65%;
+}
 
-#portpics    { float: left; 
-                height: 80%;
-                width: 80%;}
+#portpics {
+  float: left; 
+  height: 80%;
+  width: 80%;
+}
 
-.footer      { position: fixed;
-                left: 0;
-                bottom: 0;
-                width: 100%;
-                background-color: #1f2633;
-                color: white;}
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #1f2633;
+  color: white;
+}
 
-#index-nav   { padding: 0em .2em .2em 0em;
-                text-align: center;
-                font-weight: bold;
-                font-size: 1.5em;
-                padding-top: 10px;
-                width: 200px; }
+#nav { 
+  height: 100vh;
+  padding: 0em 1em 0em;
+  text-align: left;
+  font-weight: normal;
+  font-size: 1.1em;
+  padding-top: 80px;
+  float: left;
+  width: 200px;
+  position: static;
+}
 
-#nav         { padding: 0em 1em 0em;
-                text-align: left;
-                font-weight: normal;
-                font-size: 1.1em;
-                padding-top: 80px;
-                float: left;
-                width: 200px;}
+#nav li {
+  margin: 0 0 10px 0;
+}
 
-#nav li      { margin: 0 0 10px 0;}
-#mobile { display: none; }
+#mobile {
+  display: none;
+}
 
-#desktop { display: inline; }
+#desktop { 
+  display: inline;
+}
 
-.hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/banner.png");
-    height: 50%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    width: 100%; height: 44em; 
-  }
+.hero {
+  /* Sizing */
+  width: 100vw;
+  height: 100vh;
+
+  /* Flexbox stuff */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  /* Background styles */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/banner.png");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
   
-.hero-text {
-text-align: center;
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
-color: white;
+.hero h1 {
+  color: white;
+  font-size: 5em;
+  margin-top: 0;
+  margin-bottom: 0.3em;
 }
 
-.hero-text button {
-border: none;
-outline: 0;
-display: inline-block;
-padding: 10px 25px;
-color: black;
-background-color: #ddd;
-text-align: center;
-cursor: pointer;
+.hero h2 {
+  color: #1f2633;
+  margin-top: 0em;
+  margin-bottom: 0em;
 }
 
-.hero-text button:hover {
-background-color: #555;
-color: white;
+.hero button {
+  /* Positioning and sizing */
+  display: block;
+  width: 150px;
+  
+  /* Padding and margins */
+  padding: 1em;
+  margin-left: auto;
+  margin-right: auto;
+  
+  /* Text styles */
+  font-family: 'Oswald';
+  color: white;
+  font-size: 1em;
+  
+  /* Border styles */
+  border: 2px solid rgba(255, 255, 255, 0.671);
+  border-radius: 20px;
+  
+  /* Background styles */
+  background-color: rgba(0, 0, 0, 0);
+
+  cursor: pointer;
+}
+
+.hero button:hover {
+  background-color: #1f2633;
+  color: white;
 }
 
 @media only screen and (max-width: 1024px) {
